# shuup-product-reviews

./: .gitignore  .travis.yml  CHANGELOG.md  TODO  package.json  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
shuup_product_reviews/: apps.py  base.py  dashboard_items.py  models.py  notify_events.py  plugins.py  resources.py  signal_handlers.py  urls.py  utils.py  views.py
shuup_product_reviews/admin_module/: __init__.py  base.py  dashboard.py  mass_actions.py  views.py
shuup_product_reviews/migrations/: 0001_initial.py
shuup_product_reviews/static_src/: index.js  reviews.js  scripts.js  styles.scss
shuup_product_reviews/templates/shuup_product_reviews/: product_reviews.jinja
shuup_product_reviews/templates/shuup_product_reviews/admin/: edit_product_reviews.jinja
shuup_product_reviews/templates/shuup_product_reviews/plugins/: reviews_comments.jinja  star_rating.jinja
shuup_product_reviews_tests/: factories.py  settings.py  test_admin.py  test_plugins.py  test_review_aggregation.py  test_utils.py  test_vendor_review_aggregation.py  test_vendor_reviews_view.py  test_views.py
shuup_vendor_reviews/: apps.py  dashboard_items.py  models.py  notify_events.py  plugins.py  resources.py  signal_handlers.py  urls.py  utils.py  views.py
shuup_vendor_reviews/admin_module/: __init__.py  dashboard.py  mass_actions.py  views.py
shuup_vendor_reviews/api/: __init__.py  serializers.py
shuup_vendor_reviews/api/views/: __init__.py
shuup_vendor_reviews/migrations/: 0001_initial.py  0002_rating-opt.py  0003_django2_updates.py
(+3 files in other folders)
