[metadata]
name = shuup-product-reviews
version = 1.1.1
description = Shuup Product Reviews
long_description = file: README.rst
keywords = shuup, reviews

[options]
include_package_data = True
packages = find:
install_requires =
    shuup
    setuptools-gitver>=1.1.0

[options.extras_require]
shuup = shuup>=1.7,<2

[options.entry_points]
shuup.addon = shuup_product_reviews = shuup_product_reviews

[bdist_wheel]
universal = 1

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_product_reviews_tests.settings
django_find_project = false
norecursedirs = node_modules .git venv

[flake8]
exclude = dist,build,migrations,docs,venv,node_modules
max-line-length = 120
max-complexity = 10

[isort]
atomic=true
include_trailing_comma=true
line_length=120
known_first_party=shuup_product_reviews*,shuup_vendor_reviews*
multi_line_output=3
use_parentheses=true
combine_as_imports=true

[coverage:run]
branch = True
omit = */migrations/*

[prequ]
annotate = yes

requirements-dev =
    black==20.8b1
    isort==5.6.4
    flake8==3.8.4
    prequ
    -e .

requirements-test =
    pytest>=5,<6
    mock
    pytest-cov
    pytest-django==3.9.0
    black==20.8b1
    isort==5.6.4
    flake8==3.8.4
    beautifulsoup4<5
    faker==1.0.0
    -e .
